# numatim

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dict_pl.json  powers.json
dicts/: en.json  pl.json
src/: cli.yml  lib.rs  main.rs
tests/: main.rs
