[package]
name = "numatim"
version = "0.2.0"
authors = ["Maks Rawski <maksymilian.rawski@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3.9"
clap = { version = "2.33.3", features = ["yaml"] }
