[package]
name = "numatim"
version = "0.2.1"
authors = ["Maks Rawski <maksymilian.rawski@tutanota.com>"]
description = "Returns a given number in words."
homepage = "https://gitlab.com/maksymilian/numatim"
documentation = "https://gitlab.com/maksymilian/numatim"
repository = "https://gitlab.com/maksymilian/numatim"
readme = "README.md"
edition = "2018"
license = "MIT"
build = "build.rs"
keywords = ["number", "verbatim"]
categories = ["command-line-utilities", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3.9"
clap = { version = "2.33.3", features = ["yaml"] }
dirs = "3.0.1"

[build-dependencies]
dirs = "3.0.1"

